objects/OSM_Orders_In_Invoice__c.object
<CustomObject>
    <description>This is junction between invoice and order</description>
    <fields>
        <fullName>CC_Invoice__c</fullName>
        <label>CC Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>OSM_Orders In Invoices</relationshipLabel>
        <relationshipName>OSM_Orders_In_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>OSM_Orders In Invoices</relationshipLabel>
        <relationshipName>OSM_Orders_In_Invoices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Recurring_Invoice__c</fullName>
        <formula>CC_Invoice__r.Recurring_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Recurring Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Refund_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Vertex_Invoice_Failed_Count__c</fullName>
        <label>Vertex Invoice Failed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_OSM_Orders_In_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original OSM Orders In Invoice</label>
        <referenceTo>OSM_Orders_In_Invoice__c</referenceTo>
        <relationshipLabel>OSM_Orders In Invoices</relationshipLabel>
        <relationshipName>OSM_Orders_In_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertex_Call_Status__c</fullName>
        <label>Vertex Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertex_Invoice_Call_Time__c</fullName>
        <label>Vertex Invoice Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vertex_Refund_Call_Status__c</fullName>
        <label>Vertex Refund Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertex_Tax__c</fullName>
        <label>Vertex Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OSM Orders In Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OI-{0000000000}</displayFormat>
        <label>Orders In Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSM_Orders In Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>